--- a/themes/dark/rosiepink.css
+++ b/themes/dark/rosiepink.css
@@ -11,7 +11,7 @@
 
 /* Background Image */
 body {
-  background-image: url("https://media.discordapp.net/attachments/1026554757948637305/1042919699626852362/rosiepink.png");
+  background-image: url("");
 }
 
 /* Extras */
